--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,12 +26,19 @@
     <div class="container">
         <form>
             <div class="form-group">
-                <label for="sel1">Select country (select one):</label>
+                <label for="sel1">Select country:</label>
                 <select class="form-control" id="sel1">
                     <option>ru</option>
-                    <option>en</option>
+<!--                    <option>en</option>
                     <option>fr</option>
-                    <option>sp</option>
+                    <option>sp</option>-->
+                </select>
+                <br>
+            </div>
+            <div class="form-group">
+                <label for="sel2">Select city:</label>
+                <select class="form-control" id="sel2">
+                    <option>Moscow</option>
                 </select>
                 <br>
             </div>
