add correct REST service

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 
 <h2>Temperature project</h2>
 
-<form id="sel" action="MainServlet" method="post" class="form-horizontal" role="form">
+<form id="sel" action="getCurrentTAndMinTwithForecast" method="post" class="form-horizontal" role="form">
     <div class="container">
         <form>
             <div class="form-group">
