--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,20 +25,20 @@
 <form id="sel"
       action="getCurrentTAndMinTwithForecast"
       method="post"
-      class="form-horizontal"
       role="form">
+    <!--class="form-horizontal"-->
     <div class="container">
         <form>
             <div class="form-group" id="country">
                 <label for="country">Select country:</label>
-                <select name="country" class="form-control">
+                <select name="country" class="form-control" data-style="btn-primary">
                     <option value="ru">ru</option>
                 </select>
                 <br>
             </div>
             <div class="form-group" id="city">
                 <label for="city">Select city:</label>
-                <select name="city" class="form-control">
+                <select name="city" class="form-control" data-style="btn-success">
                     <option value="Moscow">Moscow</option>
                     <option value="StPeterburg">StPeterburg</option>
                 </select>
