--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,6 +33,7 @@
                 <label for="country">Select country:</label>
                 <select name="country" class="form-control" data-style="btn-primary">
                     <option value="ru">ru</option>
+                    <option value="sp">sp</option>
                 </select>
                 <br>
             </div>
@@ -41,6 +42,8 @@
                 <select name="city" class="form-control" data-style="btn-success">
                     <option value="Moscow">Moscow</option>
                     <option value="StPeterburg">StPeterburg</option>
+                    <option value="Saratov">Saratov</option>
+                    <option value="Madrid">Madrid</option>
                 </select>
                 <br>
             </div>
