rewrite - use modificator "private" for @Repository ----> for use mock in future and other

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
                         data-style="btn-primary"
                         data-width="auto">
                     <option value="ru">ru</option>
-                    <option value="sp">sp</option>
+                   <!-- <option value="sp">sp</option>-->
                 </select>
                 <br>
             </div>
@@ -51,7 +51,7 @@
                     <option value="Moscow">Moscow</option>
                     <option value="StPeterburg">StPeterburg</option>
                     <option value="Saratov">Saratov</option>
-                    <option value="Madrid">Madrid</option>
+                   <!-- <option value="Madrid">Madrid</option>-->
                 </select>
                 <br>
             </div>
